--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "react-plotly.js": "^2.6.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/plotly.js": "^2.12.18",
+    "@types/react-plotly.js": "^2.6.0"
   }
 }
