--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "plotly.js": "^2.23.2",
+    "plotly.js-dist": "^2.23.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
